--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>AbdoulAziz-Bande</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name=”description” content="Welcome to my portfolio! I'm AbdoulAziz Bande, a passionate Flutter, TypeScript and more developer. Explore my diverse range of projects, showcasing my expertise in building responsive and dynamic web applications. From innovative UI designs to efficient backend integrations, each project reflects my commitment to creating seamless user experiences. Dive into my code, discover my skills, and get in touch to discuss exciting opportunities. Let's bring ideas to life through technology!">
-    <title>AbdoulAziz-Bande</title>
+    <meta name="theme-color" content="#0C2235">
+    <link rel="icon" href="/public/favicon.ico" sizes="48x48">
+    <link rel="icon" href="/public/favicon.svg" sizes="any" type="image/svg+xml" color="#0C2235">
+    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png">
   </head>
   <body>
     <div id="root"></div>
